--- a/wiki/Javamail.wiki
+++ b/wiki/Javamail.wiki
@@ -1,3 +1,4 @@
-Link for JavaMail !
+#labels javamail,android
+Link for JavaMail.
 
 [http://code.google.com/p/javamail-android/]http://code.google.com/p/javamail-android/
